# Even_Extraction

./: DOCUMENTATION.md  INICIO.md  README.md  backend_results.json  geopolitical.py  hello.py  package-lock.json  public_search.py  public_search_final.py  pyproject.toml  results.json  results_colombia.json  results_colombia_elections.json  start-dev.bat  start-dev.sh  tags.py  test.json
backend/: .env.example  __init__.py  app.py
backend/data/: backend_results.json
backend/scripts/: public_search_final.py
polymarket-dashboard/: package-lock.json  tag.json  test.json
polymarket-dashboard/src/app/: layout.tsx  page.tsx
polymarket-dashboard/src/app/api/available-tags/: route.ts
polymarket-dashboard/src/app/api/check-dates/: route.ts
polymarket-dashboard/src/app/api/debug-events/: route.ts
polymarket-dashboard/src/app/api/geopolitical-events/: route.ts
polymarket-dashboard/src/app/tags/: page.tsx
polymarket-dashboard/src/components/: EventCard.tsx  EventsList.tsx  TagFilter.tsx  TagInput.tsx
polymarket-dashboard/src/components/events/: EventCard.tsx  EventsList.tsx
polymarket-dashboard/src/constants/: config.ts
polymarket-dashboard/src/hooks/: useEvents.ts  useTags.ts
polymarket-dashboard/src/types/: api.ts  event.ts
polymarket-dashboard/src/utils/: formatters.ts
